[gd_scene load_steps=6 format=3 uid="uid://kuxhbg7smc3b"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_f384d"]
[ext_resource type="Script" path="res://scripts/player/player_stats.gd" id="2_8gpd1"]
[ext_resource type="PackedScene" uid="uid://w1nd8ubrjgpj" path="res://Assets/characters/player/SKM_Mage_Full.fbx" id="2_job6m"]
[ext_resource type="PackedScene" uid="uid://r1fqu7bloplq" path="res://Assets/characters/player/Animation/Anim.fbx" id="3_fh0vc"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_02vy4"]
height = 1.7

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_f384d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.848955, 0)
shape = SubResource("CylinderShape3D_02vy4")

[node name="CharacterModel" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="SKM_Mage_Full" parent="CharacterModel" instance=ExtResource("2_job6m")]

[node name="Anim" parent="CharacterModel/SKM_Mage_Full" instance=ExtResource("3_fh0vc")]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="CharacterModel/SKM_Mage_Full/Anim"]
root_node = NodePath("../../..")

[node name="CameraMount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraMount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
current = true

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource("2_8gpd1")
